# todo_console

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.py
app/: __init__.py  app.py  commands.py  config.py  database.py  factory.py  halpers.py
app/db_api/: __init__.py  crud.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 44e62f901171_init.py
